config: add https to base url.
Signed-off-by: Victor Palade <victor@cloudflavor.io>

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://victor.cloudflavor.io/"
+baseURL = "https://victor.cloudflavor.io/"
 languageCode = "en-us"
 title = "Software and Ops"
 theme = "terminal"
